// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FieldLabel with custom color matches snapshot 1`] = `
<label
  className="wh-100 fse-11px fsee-normal fwt-500 tdn-none pn-static lsg--0p01em wse-nowrap cr-inherit tn-color-0p2s-ease"
  ref={[Function]}
>
  Custom Color Label
</label>
`;

exports[`FieldLabel with custom views matches snapshot 1`] = `
<label
  className="wh-100 fse-18px fsee-normal fwt-bold tdn-none pn-static lsg--0p01em wse-nowrap cr-inherit tn-color-0p2s-ease ttm-uppercase"
  ref={[Function]}
>
  Styled Label
</label>
`;

exports[`FieldLabel with default props matches snapshot 1`] = `
<label
  className="wh-100 fse-11px fsee-normal fwt-500 tdn-none pn-static lsg--0p01em wse-nowrap cr-inherit tn-color-0p2s-ease"
  ref={[Function]}
>
  Default Label
</label>
`;

exports[`FieldLabel with error state matches snapshot 1`] = `
<label
  className="wh-100 fse-11px fsee-normal fwt-500 tdn-none pn-static lsg--0p01em wse-nowrap cr-var--color-red-500 tn-color-0p2s-ease"
  ref={[Function]}
>
  Error State Label
</label>
`;

exports[`FieldLabel with large size matches snapshot 1`] = `
<label
  className="wh-100 fse-12px fsee-normal fwt-500 tdn-none pn-static lsg--0p01em wse-nowrap cr-inherit tn-color-0p2s-ease"
  ref={[Function]}
>
  Large Size Label
</label>
`;

exports[`FieldLabel with small size matches snapshot 1`] = `
<label
  className="wh-100 fse-11px fsee-normal fwt-500 tdn-none pn-static lsg--0p01em wse-nowrap cr-inherit tn-color-0p2s-ease"
  ref={[Function]}
>
  Small Size Label
</label>
`;
